Fix title not centered

--- a/frontend/src/styles/modals/confirmation-modal.css
+++ b/frontend/src/styles/modals/confirmation-modal.css
@@ -1,4 +1,4 @@
-.feedback-card.confirm .title {
+.feedback-card.confirm .confirm-title {
   text-align: left;
 }
 
